[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
error = "0.1.9"
hdrs = "0.3.2"
log = { version = "0.4.22", features = ["release_max_level_off"] }
ordered-float = "4.2.2"
parquet2 = "0.17.2"
polars = {version = "0.42.0", features = ["concat_str","lazy", "parquet","random","sql", "list_eval","serde", "is_in", "diff","rolling_window", "round_series"]}
rayon = "1.10.0"
serde = { version = "1.0.207", features = ["derive","rc"] }
serde_json = "1.0.124"
skiplist = "0.5.1"
slab = "0.4.9"
slotmap = "1.0.7"
thiserror = "1.0.63"
